--- a/app.html
+++ b/app.html
@@ -2,12 +2,12 @@
   <title>Events</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
 <template name="layout">
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,7 +18,7 @@
           </button>
           <a class="navbar-brand" href="#">Events</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{pathFor 'map'}}">Map</a></li>
             <li><a href="{{pathFor 'add'}}">Add place</a></li>
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="main">
         {{> yield}}
     </div>
 
