--- a/client/map/map.html
+++ b/client/map/map.html
@@ -3,4 +3,10 @@
     <p class="lead">See all these cool spots!</p>
     <div id="map"></div>
 
+    <ul>
+    {{#each listDots}}
+      <li>{{title}}</li>
+    {{/each}}
+    </ul>
+
 </template>
